--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
     "animate.css": "^4.1.1",
     "animejs": "^4.0.0",
+    "framer-motion": "^12.11.0",
     "next": "15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
