--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto-mono": "^5.2.5",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@vercel/analytics": "^1.5.0",
     "animate.css": "^4.1.1",
     "animejs": "^4.0.0",
     "framer-motion": "^12.11.0",
